audio video and google map and html5 layaout add

--- a/contact.html
+++ b/contact.html
@@ -82,14 +82,12 @@
 
         </ul>
         <br>
-        <a href="./home.html"> Go Back To Home Section</a>
+        <a href="./index.html"> Go Back To Home Section</a>
 
         <br><br><br><br><br>
         <br><br><br><br><br>
         <br><br><br><br><br>
         <br><br><br>
-
-
 
 
         <center>
